# py-vehicle-matching

./: .cursorrules  .gitignore  README.md  data.sql  docker-compose.yml  inputs.txt  pyproject.toml  vehicle_aliases.yaml
scripts/: db.sh
src/: db_client.py  main.py  vehicle.py  vehicle_attribute.py  vehicle_attributes.py  vehicle_matcher.py
tests/: test_main.py  test_vehicle_attributes.py  test_vehicle_matcher_with_db.py
